# utoipauto

./: .editorconfig  .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  rust-toolchain.toml  rustfmt.toml
.github/workflows/: ci.yml  publish.yml
acceptance/: Cargo.toml  README.md
acceptance/crate_segment_path/: Cargo.toml
acceptance/crate_segment_path/crate_folder/sub_folder/: mod.rs  test.rs
acceptance/folder_in_src/: Cargo.toml
acceptance/folder_in_src/crate_folder/new_sub_folder/: mod.rs  paths.rs  test.rs
acceptance/generics/: Cargo.toml
acceptance/generics/src/: main.rs  open_api.expected.json  routes.rs  schemas.rs
acceptance/import_from_workspace/: Cargo.toml
acceptance/import_from_workspace/src/: main.rs  open_api.expected.json
acceptance/lib_of_openapi/: Cargo.toml
acceptance/lib_of_openapi/src/: lib.rs
acceptance/new_crate_segment_path/: Cargo.toml
acceptance/new_crate_segment_path/crate_folder/: lib.rs
acceptance/new_crate_segment_path/crate_folder/new_sub_folder/: test.rs
acceptance/responses/: Cargo.toml
acceptance/responses/src/: main.rs  open_api.expected.json  response.rs  routes.rs
acceptance/utility/: Cargo.toml
acceptance/utility/src/: lib.rs
crate_tests/: Cargo.toml  README.md
src/: attribute_utils.rs  discover.rs  file_utils.rs  lib.rs  string_utils.rs  token_utils.rs
tests/: generics.rs  models.rs  test.rs
tests/controllers/: controller1.rs  controller2.rs  mod.rs
tests/crate_segment_path/: Cargo.toml
tests/crate_segment_path/crate_folder/: lib.rs
tests/crate_segment_path/crate_folder/sub_folder/: paths.rs  test.rs
tests/default_features/: generics.rs  mod.rs  test.rs
tests/default_features/controllers/: controller3.rs  mod.rs
tests/generic_full_path/: even_more_schemas.rs  mod.rs  more_schemas.rs  schemas.rs  test.rs
utoipa-auto-core/: Cargo.toml
utoipa-auto-core/src/: attribute_utils.rs  discover.rs  file_utils.rs  lib.rs  string_utils.rs  token_utils.rs
utoipa-auto-macro/: Cargo.toml
utoipa-auto-macro/src/: lib.rs
utoipa-auto-macro/tests/: test.rs
utoipa-auto-macro/tests/controllers/: controller1.rs
utoipauto/: Cargo.toml
utoipauto-core/: Cargo.toml  README.md
utoipauto-core/src/: attribute_utils.rs  discover.rs  file_utils.rs  lib.rs  string_utils.rs  token_utils.rs
utoipauto-macro/: Cargo.toml  README.md
utoipauto-macro/src/: lib.rs
utoipauto/src/: lib.rs
utoipauto/tests/: test.rs
utoipauto/tests/default_features/: const_generics.rs  generics.rs  lifetime_generics.rs  mod.rs  models.rs  test.rs
utoipauto/tests/default_features/controllers/: controller1.rs
utoipauto/tests/generic_full_path/: const_generics.rs  mod.rs  more_schemas.rs  partial_imports.rs  test.rs
