[package]
name = "utoipauto"
authors = ["ProbablyClem", "RxDiscovery"]
version = "0.1.11"
edition = "2021"
keywords = ["utoipa", "openapi", "swagger", "path", "auto"]
description = "Rust Macros to automate the addition of Paths/Schemas to Utoipa crate, simulating Reflection during the compilation phase"
categories = [
    "parsing",
    "development-tools::procedural-macro-helpers",
    "web-programming",
]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/ProbablyClem/utoipauto"
homepage = "https://github.com/ProbablyClem/utoipauto"

[lib]

[features]
generic_full_path = ["utoipauto-macro/generic_full_path"]

[dependencies]
utoipauto-macro = { path = "utoipauto-macro", version = "0.1.11" }


[dev-dependencies]
utoipa = { version = "4.2.0", features = ["preserve_path_order"] }
syn = { version = "2.0.52", features = ["extra-traits", "full"] }
