[workspace]
members = ["utoipauto", "utoipauto-core", "utoipauto-macro"]
resolver = "2"

[workspace.package]
authors = ["ProbablyClem", "RxDiscovery", "DenuxPlays"]
version = "0.3.0-alpha.2"
edition = "2021"
keywords = ["utoipa", "openapi", "swagger", "path", "auto"]
description = "Rust Macros to automate the addition of Paths/Schemas to Utoipa crate, simulating Reflection during the compilation phase"
categories = [
    "parsing",
    "development-tools::procedural-macro-helpers",
    "web-programming",
]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/ProbablyClem/utoipauto"
homepage = "https://github.com/ProbablyClem/utoipauto"
rust-version = "1.75.0"

[workspace.dependencies]
# Core dependencies
utoipauto-core = { path = "utoipauto-core", version = "0.3.0-alpha.2" }
utoipauto-macro = { path = "utoipauto-macro", version = "0.3.0-alpha.2" }

# Utoipa
utoipa = { version = "5.0.0", features = ["preserve_path_order"] }

# Macro dependencies
quote = "1.0.36"
syn = { version = "2.0.74", features = ["full"] }
proc-macro2 = "1.0.86"
