[workspace]
members = ["crate_segment_path", "folder_in_src", "generics", "responses"]
resolver = "2"

[workspace.package]
authors = ["ProbablyClem", "DenuxPlays", "joaquin041"]
version = "0.1.0"
edition = "2021"
publish = false
description = "A collection of crates to test utoipauto."
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ProbablyClem/utoipauto"
homepage = "https://github.com/ProbablyClem/utoipauto"

[workspace.dependencies]
utoipauto = { path = "../utoipauto", version = "0.2" }
utoipa = { git = "https://github.com/juhaku/utoipa", rev = "7d105161d3f25d3634f1ba0445a98a016a782cc7", features = ["preserve_path_order"] }
