[workspace]
members = ["crate_segment_path", "folder_in_src", "generics", "import_from_workspace", "lib_of_openapi", "responses", "utility"]
resolver = "2"

[workspace.package]
authors = ["ProbablyClem", "DenuxPlays", "joaquin041"]
version = "0.1.0"
edition = "2021"
publish = false
description = "A collection of crates to test utoipauto."
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ProbablyClem/utoipauto"
homepage = "https://github.com/ProbablyClem/utoipauto"

[workspace.dependencies]
# Utoipa
utoipauto = { path = "../utoipauto", version = "0.2" }
utoipa = { version = "5.0.0", features = ["preserve_path_order"] }

# Serde
serde_json = "1.0.128"

# Utilities
utility = { path = "utility" }
