[package]
name = "utoipa-auto-macro"
version = "0.4.0"
edition = "2021"
authors = ["RxDiscovery"]
rust-version = "1.69"
keywords = ["utoipa", "openapi", "swagger", "path", "auto"]
description = "Rust Macros to automate the addition of Paths/Schemas to Utoipa crate, simulating Reflection during the compilation phase"
categories = [
    "parsing",
    "development-tools::procedural-macro-helpers",
    "web-programming",
]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/rxdiscovery/utoipa_auto_discovery"
homepage = "https://github.com/rxdiscovery/utoipa_auto_discovery"


[lib]
proc-macro = true

[dependencies]
utoipa-auto-core = { version = "0.4.0", path = "../utoipa-auto-core" }
quote = "1.0.28"
syn = { version = "2.0.18", features = ["full"] }
proc-macro2 = "1.0.59"
