[package]
name = "utoipauto-core"
authors = ["ProbablyClem", "RxDiscovery"]
version = "0.1.3"
edition = "2021"
keywords = ["utoipa", "openapi", "swagger", "path", "auto"]
description = "Rust Macros to automate the addition of Paths/Schemas to Utoipa crate, simulating Reflection during the compilation phase"
categories = [
    "parsing",
    "development-tools::procedural-macro-helpers",
    "web-programming",
]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/ProbablyClem/utoipauto"
homepage = "https://github.com/ProbablyClem/utoipauto"

[lib]


[dependencies]
quote = "1.0.28"
syn = { version = "2.0.18", features = ["full"] }
proc-macro2 = "1.0.59"

[dev-dependencies]
utoipa = { version = "4.1.0", features = ["preserve_path_order"] }
