[package]
name = "utoipauto-macro"
version = "0.1.9"
edition = "2021"
authors = ["ProbablyClem", "RxDiscovery"]
keywords = ["utoipa", "openapi", "swagger", "path", "auto"]
description = "Rust Macros to automate the addition of Paths/Schemas to Utoipa crate, simulating Reflection during the compilation phase"
categories = [
    "parsing",
    "development-tools::procedural-macro-helpers",
    "web-programming",
]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/ProbablyClem/utoipauto"
homepage = "https://github.com/ProbablyClem/utoipauto"

[lib]
proc-macro = true

[features]
generic_full_path = ["utoipauto-core/generic_full_path"]

[dependencies]
utoipauto-core = {path = "../utoipauto-core", version = "0.1.9"}

quote = "1.0.35"
syn = { version = "2.0.52", features = ["full"] }
proc-macro2 = "1.0.78"
