[package]
name = "utoipauto-macro"
authors.workspace = true
version.workspace = true
edition.workspace = true
keywords.workspace = true
description.workspace = true
categories.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
utoipauto-core.workspace = true

quote.workspace = true
syn.workspace = true
proc-macro2.workspace = true
