[package]
name = "utoipauto"
authors.workspace = true
version.workspace = true
edition.workspace = true
keywords.workspace = true
description.workspace = true
categories.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
generic_full_path = ["utoipauto-macro/generic_full_path"]

[dependencies]
utoipauto-macro.workspace = true

[dev-dependencies]
utoipa = { version = "4.2.3", features = ["preserve_path_order"] }
syn = { version = "2.0.72", features = ["extra-traits", "full"] }
