[package]
name = "utoipauto"
authors.workspace = true
version.workspace = true
edition.workspace = true
keywords.workspace = true
description.workspace = true
categories.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
utoipauto-macro.workspace = true

[dev-dependencies]
utoipa.workspace = true
serde_json = "1.0.128"
syn = { version = "2.0.74", features = ["extra-traits", "full"] }
