[package]
name = "utoipauto-lib-test"
description = "Test library that tests folders in the src directory."
authors.workspace = true
version.workspace = true
edition.workspace = true
publish.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
path = "crate_folder/lib.rs"

[dependencies]
utoipa.workspace = true
utoipauto.workspace = true