[package]
name = "generics"
authors.workspace = true
version.workspace = true
edition.workspace = true
publish.workspace = true
description.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lints.rust]
unused = "allow"

[dependencies]
utoipa.workspace = true
utoipauto =  { workspace = true, features = ["schema_discovery"]}

[dev-dependencies]
serde_json = "1.0.128"
