[package]
name = "responses"
authors.workspace = true
version.workspace = true
edition.workspace = true
publish.workspace = true
description.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lints.rust]
unused = "allow"

[dependencies]
# Utoipa
utoipa.workspace = true
utoipauto.workspace = true

# Serde
serde_json.workspace = true

# Utility
utility.workspace = true
