[package]
name = "utility"
description = "Utility functions for the acceptance tests"
authors.workspace = true
version.workspace = true
edition.workspace = true
publish.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
serde_json.workspace = true
