[package]
name = "utoipauto-lib-test"
authors = ["joaquin041"]
version = "0.0.1"
edition = "2021"
publish = false
description = "Test library in utoipauto project"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ProbablyClem/utoipauto"
homepage = "https://github.com/ProbablyClem/utoipauto"

[lib]
path = "crate_folder/lib.rs"

[dependencies]
utoipa = { version = "4.2.0" }
utoipauto-macro = { path = "../../utoipauto-macro", version = "0.1.12" }